--- a/WatchShop.WebApp/Web.config
+++ b/WatchShop.WebApp/Web.config
@@ -77,7 +77,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="WebBanDongHoContext" connectionString="data source=.\SQLEXPRESS;initial catalog=WEBBANDONGHO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="WebBanDongHoContext" connectionString="data source=.;initial catalog=WEBBANDONGHO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <system.webServer>
     <handlers>
